feat: optimize codebase, add 8 AI providers support, and redesign LIVE dashboard UI

--- a/.env.example
+++ b/.env.example
@@ -2,82 +2,102 @@
 # AI 模型配置
 # ============================================================
 
-# AI Provider (支持多模型竞赛用几个就填几个，用逗号分隔: "deepseek,claude,gemini,openai")
+# AI Provider（支持多模型竞赛，用逗号分隔，最多8个）
+# 可选: openai, deepseek, gemini, claude, qwen, grok, glm, custom
 AI_PROVIDER=openai,qwen,deepseek
 
-# 统一API密钥 - 到这个网站申请: https://ai.jlbcode.info/
-# 注册账号后创建令牌，一定要在平台开通对应模型的使用权限
+# 统一API密钥（对应代理平台可一个key用多个模型）
 FASTAPI_KEY=
 
-# OpenAI
-OPENAI_MODEL=gpt-5.2
+# ─────────────── OpenAI ───────────────
+OPENAI_API_KEY=            # 不填则 fallback 到 FASTAPI_KEY
+OPENAI_MODEL=gpt-4o
+OPENAI_BASE_URL=           # 留空使用官方 SDK；填入代理 URL 则走 HTTP 请求
+# OPENAI_SIMULATION_MODE=true   # 覆盖全局 SIMULATION_MODE，只对该 provider 生效
 
-# DeepSeek
+# ─────────────── DeepSeek ───────────────
 DEEPSEEK_API_KEY=
-DEEPSEEK_MODEL=deepseek-3.2
+DEEPSEEK_MODEL=deepseek-chat
 DEEPSEEK_BASE_URL=https://api.deepseek.com/v1
+# DEEPSEEK_SIMULATION_MODE=
 
-# Google Gemini
+# ─────────────── Google Gemini ───────────────
+GEMINI_API_KEY=
 GEMINI_MODEL=gemini-3-flash-preview
+GEMINI_BASE_URL=           # 留空自动构建；可指向 Vertex AI 代理
+# GEMINI_SIMULATION_MODE=
 
-# Qwen
-# Base URL 按照 API Key 所属地域选择：
-# - 华北2（北京）：https://dashscope.aliyuncs.com/compatible-mode/v1
-# - 新加坡：https://dashscope-intl.aliyuncs.com/compatible-mode/v1
-# - 美国（弗吉尼亚）：https://dashscope-us.aliyuncs.com/compatible-mode/v1
+# ─────────────── Anthropic Claude ───────────────
+CLAUDE_API_KEY=
+CLAUDE_MODEL=claude-sonnet-4-20250514
+CLAUDE_BASE_URL=https://api.anthropic.com/v1/messages
+# CLAUDE_SIMULATION_MODE=
+
+# ─────────────── Qwen（阿里云通义千问）───────────────
+QWEN_API_KEY=
 QWEN_MODEL=qwen-max
+# Base URL 按 API Key 所属地域选择：
+#   华北2（北京）：https://dashscope.aliyuncs.com/compatible-mode/v1
+#   新加坡：      https://dashscope-intl.aliyuncs.com/compatible-mode/v1
+#   美国：        https://dashscope-us.aliyuncs.com/compatible-mode/v1
+QWEN_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
+# QWEN_SIMULATION_MODE=
 
-# Anthropic Claude
-CLAUDE_MODEL=claude-opus-4-5-20251101
+# ─────────────── Grok（xAI）───────────────
+GROK_API_KEY=
+GROK_MODEL=grok-3
+GROK_BASE_URL=https://api.x.ai/v1
+# GROK_SIMULATION_MODE=
+
+# ─────────────── GLM（智谱 ChatGLM）───────────────
+GLM_API_KEY=
+GLM_MODEL=glm-4-flash
+GLM_BASE_URL=https://open.bigmodel.cn/api/paas/v4
+# GLM_SIMULATION_MODE=
+
+# ─────────────── Custom（完全自定义 / OpenAI-compatible API）───────────────
+CUSTOM_API_KEY=
+CUSTOM_MODEL=custom-model
+CUSTOM_BASE_URL=           # 必填！例如 https://your-proxy.example.com/v1
+# CUSTOM_SIMULATION_MODE=
 
 # ============================================================
 # Polymarket 配置
 # ============================================================
 
 # 真实交易模式必需：钱包私钥（以0x开头的64位十六进制字符串）
-# 多账户支持：用逗号分隔多个私钥，与 AI_PROVIDER 数量对应
-# 例如: POLYMARKET_PRIVATE_KEYS="0xabc...,0xdef...,0x123..." 对应 AI_PROVIDER="deepseek,gemini,openai"
-# 单账户模式：使用 POLYMARKET_PRIVATE_KEY（向后兼容）
+# 多账户：POLYMARKET_PRIVATE_KEYS 用逗号分隔，顺序与 AI_PROVIDER 对应
 POLYMARKET_PRIVATE_KEYS=
 POLYMARKET_PRIVATE_KEY=
 
 # 钱包类型：auto / eoa / magic_link / proxy / safe
-# - eoa: 使用 EOA 签名（signature_type=0），无需显式 funder
-# - magic_link/proxy: 使用代理钱包签名（signature_type=1），建议配置或自动派生 funder
-# - safe: 使用 Gnosis Safe 签名（signature_type=2），需提供 SAFE 地址作为 funder
 POLYMARKET_WALLET_TYPE=auto
-
-# 高级选项：手动覆盖签名类型（0=eoa,1=proxy,2=safe），一般不需要改
+# 高级：手动覆盖签名类型（0=eoa,1=proxy,2=safe）
 POLYMARKET_SIGNATURE_TYPE=2
-
-# 可选：资金地址（代理钱包/SAFE 地址）；EOA 钱包可留空
+# 代理钱包/SAFE 地址（EOA 留空）
 POLYMARKET_FUNDER=
 
 # ============================================================
 # 交易策略配置
 # ============================================================
 
-# 模拟交易模式（推荐用于测试多模型竞赛）# true=模拟交易，false=真实交易
+# 全局模拟交易开关（true=模拟，false=真实）
+# 可被各 Provider 的 <PROVIDER>_SIMULATION_MODE 覆盖（混合真实+模拟）
 SIMULATION_MODE=true
-# 模拟模式下每个模型的初始虚拟账户余额
+# 模拟模式初始虚拟余额
 INITIAL_BALANCE_USD=500
-#每笔最大交易额
+# 单笔最大交易额（USD）
 MAX_NOTIONAL_USD=50
-#最大仓位
+# 最大仓位（USD）
 MAX_POSITION_USD=200
-#每天最多交易次数
+# 每天最多交易次数
 MAX_DAILY_TRADES=200
-#间隔多久调用AI
+# AI 调用间隔（秒）
 RUN_INTERVAL_SEC=100
 
 # 自动赎回（仅真实交易模式生效）
-# 开启后会定期扫描可赎回仓位并发起 redeem
 AUTO_REDEEM_ENABLED=true
-# 扫描周期（秒，最小 5）
 AUTO_REDEEM_INTERVAL_SEC=60
-# 最小赎回金额（USD，低于该值跳过）
 AUTO_REDEEM_MIN_VALUE_USD=0.01
-# 是否优先通过 Polymarket relayer 赎回（EOA 失败时可回退链上直赎）
 AUTO_REDEEM_USE_RELAYER=true
-# 可选：自定义 relayer 地址
 POLYMARKET_RELAYER_URL=https://relayer-v2.polymarket.com/
