feat: simplify runtime and enable isolated parallel multi-model execution

--- a/.env.example
+++ b/.env.example
@@ -1,103 +1,157 @@
 # ============================================================
-# AI 模型配置
+# pm-agent-plus Environment Template (2026-02)
 # ============================================================
 
-# AI Provider（支持多模型竞赛，用逗号分隔，最多8个）
+# -------------------------------
+# Runtime / Instance
+# -------------------------------
+# 多实例运行时用于区分进程、日志、pid
+PM_AGENT_INSTANCE_ID=default
+# 可选覆盖（通常不需要）
+# PM_AGENT_PROCESS_NAME=pm-agent-plus-a1
+# PM_AGENT_LOG_FILE=/root/pm-agent-plus/pm-agent-plus-a1.log
+# PM_AGENT_PID_FILE=/root/pm-agent-plus/pm-agent-plus-a1.pid
+
+# 数据库路径
+DB_PATH=pm_agent.db
+# 可选：强制区分模拟/实盘 DB
+SIM_DB_PATH=
+LIVE_DB_PATH=
+
+
+# -------------------------------
+# AI Providers
+# -------------------------------
 # 可选: openai, deepseek, gemini, claude, qwen, grok, glm, custom
-AI_PROVIDER=openai,qwen,deepseek
+# 多模型用逗号分隔，例如: openai,qwen,glm
+AI_PROVIDER=openai
 
-# 统一API密钥（对应代理平台可一个key用多个模型）
-FASTAPI_KEY=
+# OpenAI / OpenAI-compatible
+OPENAI_API_KEY=
+OPENAI_MODEL=gpt-5.2
+# 留空使用 OpenAI 官方；填网关时建议为 .../v1
+OPENAI_BASE_URL=
+# GPT-5 reasoning effort: none/low/medium/high/xhigh
+OPENAI_REASONING_EFFORT=medium
+# 是否强制使用 stream=true（适用于部分网关）
+OPENAI_STREAM=false
+# OPENAI_SIMULATION_MODE=
 
-# ─────────────── OpenAI ───────────────
-OPENAI_API_KEY=            # 不填则 fallback 到 FASTAPI_KEY
-OPENAI_MODEL=gpt-4o
-OPENAI_BASE_URL=           # 留空使用官方 SDK；填入代理 URL 则走 HTTP 请求
-# OPENAI_SIMULATION_MODE=true   # 覆盖全局 SIMULATION_MODE，只对该 provider 生效
-
-# ─────────────── DeepSeek ───────────────
+# DeepSeek
 DEEPSEEK_API_KEY=
 DEEPSEEK_MODEL=deepseek-chat
 DEEPSEEK_BASE_URL=https://api.deepseek.com/v1
 # DEEPSEEK_SIMULATION_MODE=
 
-# ─────────────── Google Gemini ───────────────
+# Gemini
 GEMINI_API_KEY=
 GEMINI_MODEL=gemini-3-flash-preview
-GEMINI_BASE_URL=           # 留空自动构建；可指向 Vertex AI 代理
+# 留空会自动组装 Google 原生 URL
+GEMINI_BASE_URL=
 # GEMINI_SIMULATION_MODE=
 
-# ─────────────── Anthropic Claude ───────────────
+# Claude
 CLAUDE_API_KEY=
 CLAUDE_MODEL=claude-sonnet-4-20250514
 CLAUDE_BASE_URL=https://api.anthropic.com/v1/messages
 # CLAUDE_SIMULATION_MODE=
 
-# ─────────────── Qwen（阿里云通义千问）───────────────
+# Qwen（支持多模型并行：逗号分隔）
 QWEN_API_KEY=
 QWEN_MODEL=qwen-max
-# Base URL 按 API Key 所属地域选择：
-#   华北2（北京）：https://dashscope.aliyuncs.com/compatible-mode/v1
-#   新加坡：      https://dashscope-intl.aliyuncs.com/compatible-mode/v1
-#   美国：        https://dashscope-us.aliyuncs.com/compatible-mode/v1
 QWEN_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
 # QWEN_SIMULATION_MODE=
 
-# ─────────────── Grok（xAI）───────────────
+# Grok
 GROK_API_KEY=
 GROK_MODEL=grok-3
 GROK_BASE_URL=https://api.x.ai/v1
 # GROK_SIMULATION_MODE=
 
-# ─────────────── GLM（智谱 ChatGLM）───────────────
+# GLM
 GLM_API_KEY=
 GLM_MODEL=glm-4-flash
 GLM_BASE_URL=https://open.bigmodel.cn/api/paas/v4
 # GLM_SIMULATION_MODE=
 
-# ─────────────── Custom（完全自定义 / OpenAI-compatible API）───────────────
+# Custom OpenAI-compatible
 CUSTOM_API_KEY=
 CUSTOM_MODEL=custom-model
-CUSTOM_BASE_URL=           # 必填！例如 https://your-proxy.example.com/v1
+CUSTOM_BASE_URL=
 # CUSTOM_SIMULATION_MODE=
 
-# ============================================================
-# Polymarket 配置
-# ============================================================
 
-# 真实交易模式必需：钱包私钥（以0x开头的64位十六进制字符串）
-# 多账户：POLYMARKET_PRIVATE_KEYS 用逗号分隔，顺序与 AI_PROVIDER 对应
+# -------------------------------
+# Trading / Strategy
+# -------------------------------
+# 全局模拟开关（可被 provider 级 SIMULATION_MODE 覆盖）
+SIMULATION_MODE=true
+MODEL_ID=default
+
+INITIAL_BALANCE_USD=1000
+MAX_NOTIONAL_USD=5
+MAX_POSITION_USD=100
+MAX_DAILY_TRADES=2000
+SLIPPAGE_BPS=30
+MIN_POSITION_SHARES=0.01
+RUN_INTERVAL_SEC=60
+# 多模型执行模式：true=并发执行，false=串行执行
+MODEL_PARALLEL=true
+# 并发 worker 数；0=自动(=模型数)，1=强制串行
+MODEL_MAX_WORKERS=0
+RECONCILIATION_SYNC_INTERVAL_SEC=5
+
+# 下单类型: GTC / IOC
+ORDER_TYPE=GTC
+SYMBOL=BTC
+
+
+# -------------------------------
+# Polymarket Core
+# -------------------------------
+POLYMARKET_HOST=https://clob.polymarket.com
+POLYMARKET_CHAIN_ID=137
+POLYMARKET_HOURLY_PREFIX=bitcoin-up-or-down
+
+# 多模型实盘：每个运行模型一把私钥，顺序与展开后的模型顺序一致
+# 例如 AI_PROVIDER=openai,qwen 且 QWEN_MODEL=a,b -> 需要 3 把 key
 POLYMARKET_PRIVATE_KEYS=
-POLYMARKET_PRIVATE_KEY=
+# 可选：与上面一一对应
+POLYMARKET_FUNDERS=
 
-# 钱包类型：auto / eoa / magic_link / proxy / safe
-POLYMARKET_WALLET_TYPE=auto
-# 高级：手动覆盖签名类型（0=eoa,1=proxy,2=safe）
-POLYMARKET_SIGNATURE_TYPE=2
-# 代理钱包/SAFE 地址（EOA 留空）
+# 单模型可用单 key（不推荐混用）
+POLYMARKET_PRIVATE_KEY=
 POLYMARKET_FUNDER=
 
-# ============================================================
-# 交易策略配置
-# ============================================================
+# 钱包模式: auto/eoa/magic_link/proxy/safe
+POLYMARKET_WALLET_TYPE=auto
+# 签名类型: 0=eoa, 1=proxy, 2=safe
+POLYMARKET_SIGNATURE_TYPE=2
 
-# 全局模拟交易开关（true=模拟，false=真实）
-# 可被各 Provider 的 <PROVIDER>_SIMULATION_MODE 覆盖（混合真实+模拟）
-SIMULATION_MODE=true
-# 模拟模式初始虚拟余额
-INITIAL_BALANCE_USD=500
-# 单笔最大交易额（USD）
-MAX_NOTIONAL_USD=50
-# 最大仓位（USD）
-MAX_POSITION_USD=200
-# 每天最多交易次数
-MAX_DAILY_TRADES=200
-# AI 调用间隔（秒）
-RUN_INTERVAL_SEC=100
+# 可选：若已有 API 凭证可直接填；不填将尝试自动派生
+POLYMARKET_API_KEY=
+POLYMARKET_API_SECRET=
+POLYMARKET_API_PASSPHRASE=
 
-# 自动赎回（仅真实交易模式生效）
+# Builder 凭证（自动赎回/relayer 常用）
+POLYMARKET_BUILDER_API_KEY=
+POLYMARKET_BUILDER_SECRET=
+POLYMARKET_BUILDER_PASSPHRASE=
+# 兼容别名（与上面等价）
+POLY_BUILDER_API_KEY=
+POLY_BUILDER_SECRET=
+POLY_BUILDER_PASSPHRASE=
+
+
+# -------------------------------
+# Auto Redeem
+# -------------------------------
 AUTO_REDEEM_ENABLED=true
 AUTO_REDEEM_INTERVAL_SEC=60
 AUTO_REDEEM_MIN_VALUE_USD=0.01
 AUTO_REDEEM_USE_RELAYER=true
 POLYMARKET_RELAYER_URL=https://relayer-v2.polymarket.com/
+
+# 可选：EOA 直连赎回时的 RPC
+POLYGON_RPC_URL=
+POLYMARKET_RPC_URL=
